--- a/style.css
+++ b/style.css
@@ -1,112 +1,72 @@
-@import 'https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i';
-
-body,
-html {
+html,
+body {
     margin: 0;
     padding: 0;
-    font-family: 'Lato', sans-serif;
-    background-color: white;
-    overflow: hidden;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-a,
-li {
-    margin: 0;
-    padding: 0;
-}
-
-#container {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background: #000;
+}
+
+.glow-on-hover {
+    width: 220px;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
+    cursor: pointer;
     position: relative;
-    float: left;
+    z-index: 0;
+    border-radius: 10px;
+}
+
+.glow-on-hover:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.glow-on-hover:active {
+    color: #000
+}
+
+.glow-on-hover:active:after {
+    background: transparent;
+}
+
+.glow-on-hover:hover:before {
     opacity: 1;
 }
 
-#container-bg {
-    width: 100vw;
-    height: 100vh;
+.glow-on-hover:after {
+    z-index: -1;
+    content: '';
     position: absolute;
-    z-index: 0;
-}
-
-.bg {
-    width: 50%;
+    width: 100%;
     height: 100%;
-    position: relative;
-    float: left;
-}
-
-.black {
-    background-color: black;
-}
-
-.white {
-    background-color: white;
-}
-
-#c-container {
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    top: 0;
+    background: #111;
     left: 0;
-}
-
-#c {
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
     top: 0;
-    left: 0;
+    border-radius: 10px;
 }
 
-#ideas {
-    width: 100vw;
-    height: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    z-index: 10;
-}
-
-.idea {
-    width: 50%;
-    height: 100%;
-    position: relative;
-    float: left;
-}
-
-.idea-text {
-    width: calc(100% - 20px);
-    height: 100%;
-    font-family: 'Lato', sans-serif;
-    font-size: 70px;
-    padding: 0 10px;
-    font-weight: 600;
-    line-height: 1em;
-    position: relative;
-    float: left;
-}
-
-/*GREAT IDEAS BURN*/
-#idea-text-left {
-    color: white;
-    text-align: right;
-    text-shadow: 0px 0px 20px rgba(0,0,0,0.5)
-}
-
-/*FUEL*/
-#idea-text-right {
-    color: black;
-    text-align: left;
-    margin-top: 2em;
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
 }
